Add Bcc to mail template + add ExtendedSettings to User Object Type Definition + Implement compilation when Add/Update Mail Templates
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42250

--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRMail/VRMailMessageTemplateEditor.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRMail/VRMailMessageTemplateEditor.html
@@ -28,7 +28,12 @@
                                 </vr-row>
                                 <vr-row removeline>
                                     <vr-columns width="fullrow">
-                                        <vr-textbox label="CC" value="scopeModel.cc"></vr-textbox>
+                                        <vr-textbox label="Cc" value="scopeModel.cc"></vr-textbox>
+                                    </vr-columns>
+                                </vr-row>
+                                <vr-row removeline>
+                                    <vr-columns width="fullrow">
+                                        <vr-textbox label="Bcc" value="scopeModel.bcc"></vr-textbox>
                                     </vr-columns>
                                 </vr-row>
                                 <vr-row removeline>
