--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Account/Templates/AccountGridTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Account/Templates/AccountGridTemplate.html
@@ -6,7 +6,7 @@
              pagingtype="'Pager'"
              menuactions="scopeModel.menuActions"
              idfield="AccountId"
-             defaultsortbyfieldname="'AccountId'" enableautoexport="true">
+             defaultsortbyfieldname="'AccountId'" enableautoexport="true" normalcell>
     <vr-datagridcolumn headertext="'ID'" field="'AccountId'"></vr-datagridcolumn>
     <vr-datagridcolumn ng-repeat="column in scopeModel.columns" columnattributes="column"></vr-datagridcolumn>
 
