Implementing status for account balance
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42275

--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/StatusDefinition/StatusDefinitionEditor.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/StatusDefinition/StatusDefinitionEditor.html
@@ -17,6 +17,9 @@
                             </vr-genericdata-businessentitydefinition-selector>
                         </vr-columns>
                         <vr-columns width="1/4row">
+                            <vr-switch label="Active" value="scopeModel.isActive"></vr-switch>
+                        </vr-columns>
+                        <vr-columns width="1/4row">
                             <vr-switch label="Has Initial Charge" value="scopeModel.HasInitialCharge"></vr-switch>
                         </vr-columns>
                     </vr-row>
