Refactor Branch Convertor
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42308

--- a/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Branche/Templates/BrancheConvertorEditor.html
+++ b/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Branche/Templates/BrancheConvertorEditor.html
@@ -50,7 +50,7 @@
         <vr-textbox value="scopeModel.insertDateColumnName" label="Insert Date Column Name" isrequired="true"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/3row">
-        <vr-textbox value="scopeModel.branchCodeColumnName" label="Branche Code Column Name" isrequired="true"></vr-textbox>
+        <vr-textbox value="scopeModel.branchCodeColumnName" label="Branch Code Column Name" isrequired="true"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/3row">
         <vr-textbox value="scopeModel.contractRefNoColumnName" label="Contract Ref No Column Name" isrequired="true"></vr-textbox>
@@ -67,34 +67,34 @@
 </vr-section>
 <vr-section title="Address Columns">
     <vr-columns width="1/3row">
-        <vr-textbox value="scopeModel.smaOwnerIdColumnName" label="SMA Owner Id Column Name" isrequired="true"></vr-textbox>
+        <vr-textbox value="scopeModel.smaOwnerIdColumnName" label="Account Id Column Name" isrequired="true"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/3row">
-        <vr-textbox value="scopeModel.smaAddressColumnName" label="SMA Address Column Name" isrequired="true"></vr-textbox>
+        <vr-textbox value="scopeModel.smaAddressColumnName" label="Address Column Name" isrequired="true"></vr-textbox>
     </vr-columns>   
     <vr-columns width="1/3row">
-        <vr-textbox value="scopeModel.atTypeIdColumnName" label="Type ID Column Name" isrequired="true"></vr-textbox>
+        <vr-textbox value="scopeModel.atTypeIdColumnName" label="Address Type Column Name" isrequired="true"></vr-textbox>
     </vr-columns>   
 </vr-section>
 <vr-section title="Phone Numbers Columns">
     <vr-columns width="1/3row">
-        <vr-textbox value="scopeModel.smpOwnerIdColumnName" label="SMP Owner Id Column Name" isrequired="true"></vr-textbox>
+        <vr-textbox value="scopeModel.smpOwnerIdColumnName" label="Account Id Column Name" isrequired="true"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/3row">
-        <vr-textbox value="scopeModel.phoneTypeColumnName" label="Phone Type Column Name" isrequired="true"></vr-textbox>
+        <vr-textbox value="scopeModel.phoneTypeColumnName" label="Number Type Column Name" isrequired="true"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/3row">
-        <vr-textbox value="scopeModel.smpPhoneNumberColumnName" label="SMP Phone Number Column Name" isrequired="true"></vr-textbox>
+        <vr-textbox value="scopeModel.smpPhoneNumberColumnName" label="Number Column Name" isrequired="true"></vr-textbox>
     </vr-columns>
 </vr-section>
 <vr-section title="Identities Columns">
     <vr-columns width="1/3row">
-        <vr-textbox value="scopeModel.identityIdColumnName" label="Identity ID Column Name" isrequired="true"></vr-textbox>
+        <vr-textbox value="scopeModel.smniOwnerIdColumnName" label="Account Id Column Name" isrequired="true"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/3row">
-        <vr-textbox value="scopeModel.smniOwnerIdColumnName" label="SMNI Owner ID Column Name" isrequired="true"></vr-textbox>
+        <vr-textbox value="scopeModel.identityIdColumnName" label="Identity Type Column Name" isrequired="true"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/3row">
-        <vr-textbox value="scopeModel.smniValueColumnName" label="SMNI Value Column Name" isrequired="true"></vr-textbox>
+        <vr-textbox value="scopeModel.smniValueColumnName" label="Value Column Name" isrequired="true"></vr-textbox>
     </vr-columns>
 </vr-section>
