--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Views/BillingTransaction/BillingTransactionEditor.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Views/BillingTransaction/BillingTransactionEditor.html
@@ -4,21 +4,23 @@
             <vr-tabs>
                 <vr-tab header="'Definition'">
                     <vr-row removeline>
-                        <vr-accountbalance-account-selector on-ready="scopeModel.onAccountSelectorReady" normal-col-num="6" ng-if="scopeModel.showAccountSelector" isrequired="true"></vr-accountbalance-account-selector>
+                        <vr-accountbalance-accountstatus-selector hideremoveicon on-ready="scopeModel.onAccountStatusSelectorReady" normal-col-num="4" ng-if="scopeModel.showAccountSelector" onselectionchanged="scopeModel.onAccountStatusSelectionChanged"></vr-accountbalance-accountstatus-selector>
 
-                        <vr-columns width="1/2row">
+                        <vr-accountbalance-account-selector on-ready="scopeModel.onAccountSelectorReady" normal-col-num="4" ng-if="scopeModel.showAccountSelector" isrequired="true"></vr-accountbalance-account-selector>
+
+                        <vr-columns colnum="4">
                             <vr-textbox label="Amount" value="scopeModel.amount" isrequired="true" type="number" customvalidate="scopeModel.validateAmount()"></vr-textbox>
                         </vr-columns>
 
-                        <vr-common-currency-selector on-ready="scopeModel.onCurrencySelectorReady" isrequired="true" normal-col-num="6"></vr-common-currency-selector>
+                        <vr-common-currency-selector on-ready="scopeModel.onCurrencySelectorReady" isrequired="true" normal-col-num="4"></vr-common-currency-selector>
 
-                        <vr-accountbalance-billingtransactiontype-selector on-ready="scopeModel.onBillingTransactionTypeSelectorReady" isrequired="true" normal-col-num="6" hideremoveicon></vr-accountbalance-billingtransactiontype-selector>
+                        <vr-accountbalance-billingtransactiontype-selector on-ready="scopeModel.onBillingTransactionTypeSelectorReady" isrequired="true" normal-col-num="4" hideremoveicon></vr-accountbalance-billingtransactiontype-selector>
 
-                        <vr-columns width="1/2row">
+                        <vr-columns colnum="4">
                             <vr-textbox label="Reference" value="scopeModel.reference" isrequired="true"></vr-textbox>
                         </vr-columns>
 
-                        <vr-columns width="1/2row">
+                        <vr-columns colnum="4">
                             <vr-datetimepicker label="Date" value="scopeModel.date" typeof="dateTime" isrequired="true"></vr-datetimepicker>
                         </vr-columns>
                     </vr-row>
