--- a/Retail/Code/Retail.Voice.Web/Retail_Voice/Directives/Settings/Templates/VoiceTechnicalSettings.html
+++ b/Retail/Code/Retail.Voice.Web/Retail_Voice/Directives/Settings/Templates/VoiceTechnicalSettings.html
@@ -8,5 +8,12 @@
                 <retail-voice-internationalidentification-template normal-col-num="4" on-ready="onInternationalIdentificationTemplateReady"></retail-voice-internationalidentification-template>
             </vr-section>
         </vr-tab>
+        <vr-tab header="'Import CDR'">
+            <vr-row>
+                <vr-columns width="1/2row">
+                    <vr-textbox value="scopeModel.saleAmountPrecision" label="Sale Amount Precision" type="number" decimalprecision="0" hint="No Rounding is Done for null Sale Amount Precision"></vr-textbox>
+                </vr-columns>
+            </vr-row>
+        </vr-tab>
     </vr-tabs>
 </vr-columns>
