enhance settings editor
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42330

--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/Settings/SettingsEditor.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/Settings/SettingsEditor.html
@@ -8,7 +8,7 @@
             </vr-row>
             <vr-row>
                 <vr-columns width="fullrow">
-                    <vr-section title="Settings">
+                    <vr-section header="Settings">
                         <vr-row removeline>
                             <vr-directivewrapper directive="settingEditor" on-ready="onSettingsEditorReady"></vr-directivewrapper>
                         </vr-row>
