Userr Group relation UI reflection and backend implementation
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42339

--- a/Vanrise/Code/Vanrise.Security.Web/Security/Directives/User/Templates/UsersGrid.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Directives/User/Templates/UsersGrid.html
@@ -12,6 +12,7 @@
     </vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Enable Till'" field="'Entity.EnabledTill'" type="'Date'" fixedwidth="'100'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Last Login Date'" field="'Entity.LastLogin'" type="'Datetime'" fixedwidth="'150'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Groups'" field="'GroupNames'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Description'" field="'Entity.Description'"></vr-datagridcolumn>
     <vr-datagridexpandablerow>
         <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
