Branch Extended info update
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42343

--- a/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Account/Part/Runtime/Templates/AccountTypePartBranchExtendedInfoRuntimeTemplate.html
+++ b/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Account/Part/Runtime/Templates/AccountTypePartBranchExtendedInfoRuntimeTemplate.html
@@ -6,5 +6,38 @@
         <vr-columns width="1/2row">
             <vr-textbox value="scopeModel.contractReferenceNumber" label="Contract Reference Number"></vr-textbox>
         </vr-columns>
+        <vr-columns width="1/2row">
+            <vr-textbox value="scopeModel.cNIC" label="CNIC"></vr-textbox>
+        </vr-columns>
+        <vr-columns width="1/2row">
+            <vr-textbox value="scopeModel.nTN" label="NTN"></vr-textbox>
+        </vr-columns>
+        <vr-columns width="1/2row">
+            <vr-textbox value="scopeModel.registrationNumber" label="Registration Number"></vr-textbox>
+        </vr-columns>
+        <vr-columns width="1/2row">
+            <vr-textbox value="scopeModel.refNumber" label="Ref Number"></vr-textbox>
+        </vr-columns>
+        <vr-columns width="1/2row">
+            <vr-textbox value="scopeModel.passportNumber" label="Passport Number"></vr-textbox>
+        </vr-columns>
+        <vr-columns width="1/2row">
+            <vr-textbox value="scopeModel.assignedNumber" label="Assigned Number"></vr-textbox>
+        </vr-columns>
+        <vr-columns width="1/2row">
+            <vr-textbox value="scopeModel.pIN" label="PIN"></vr-textbox>
+        </vr-columns>
+        <vr-columns width="1/2row">
+            <vr-textbox value="scopeModel.billingAddress" label="Billing Address"></vr-textbox>
+        </vr-columns>
+        <vr-columns width="1/2row">
+            <vr-textbox value="scopeModel.technicalAddress" label="Technical Address"></vr-textbox>
+        </vr-columns>
+        <vr-columns width="1/2row">
+            <vr-textbox value="scopeModel.officeAddress" label="Office Address"></vr-textbox>
+        </vr-columns>
+        <vr-columns width="1/2row">
+            <vr-textbox value="scopeModel.homeAddress" label="Home Address"></vr-textbox>
+        </vr-columns>
     </vr-row>
 </vr-tab>
