--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/GenericRule/Templates/GenericRuleManagementTemplate.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/GenericRule/Templates/GenericRuleManagementTemplate.html
@@ -8,7 +8,7 @@
         </vr-columns>
         <vr-directivewrapper directive="scopeModel.settingsFilterEditor" on-ready="scopeModel.onSettingsFilterDirectiveReady" normal-col-num="2"></vr-directivewrapper>
         <span ng-repeat="filter in scopeModel.filters">
-            <vr-directivewrapper directive="filter.directiveEditor" on-ready="filter.onDirectiveReady" normal-col-num="2"></vr-directivewrapper>
+            <vr-directivewrapper ng-show="filter.showInBasicSearch" directive="filter.directiveEditor" on-ready="filter.onDirectiveReady" normal-col-num="2"></vr-directivewrapper>
         </span>
         <!--<span ng-show="advancedSelected">
             <vr-directivewrapper directive="scopeModel.settingsFilterEditor" on-ready="onSettingsFilterDirectiveReady" normal-col-num="2"></vr-directivewrapper>
